<resources>
    <string name="app_name">android-databinding</string>
    <string name="settings">Account Settings</string>
    <string name="accountName">Account Name</string>
    <string name="notificationToggle">All Notifications</string>
    <string name="notificationType">Notification Type</string>
    <string name="communicationMode">Communication Mode</string>
    <string name="defaultPaymentOption">Default Payment Option</string>
    <string name="priceDropPercent">Min Price Drop %</string>
    <string name="showProductReviews">Show Product Reviews Above</string>
    <string name="promoNotification">Promo Notification</string>
    <string name="sms">SMS</string>
    <string name="email">Email</string>
    <string name="hint_account_name">account name</string>
    <string name="deals">Deals</string>
    <string name="promos">Promos</string>
    <string name="save_settings">Save Settings</string>
</resources>
