<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="accountSettings"
            type="com.elksa.sample.android.databinding.AccountSetting" />

        <variable
            name="eventListener"
            type="com.elksa.sample.android.databinding.SettingsEventListener" />

        <variable
            name="spinAdapter"
            type="android.widget.ArrayAdapter" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:context="zoftino.com.databinding.MainActivity">

        <TextView
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/account_name_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountName"
            app:layout_constraintBaseline_toBaselineOf="@+id/account_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/account_name" />

        <EditText
            android:id="@+id/account_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_account_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@={accountSettings.accountName}"
            app:layout_constraintLeft_toRightOf="@+id/account_name_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/notifications_toggle_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/notificationToggle"
            app:layout_constraintBaseline_toBaselineOf="@+id/notifications"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/notifications" />

        <ToggleButton
            android:id="@+id/notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="@={accountSettings.notifications}"
            app:layout_constraintLeft_toRightOf="@+id/notifications_toggle_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/account_name" />

        <TextView
            android:id="@+id/notification_types_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/notificationType"
            app:layout_constraintHorizontal_bias="0.199"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notifications_toggle_l" />

        <CheckBox
            android:id="@+id/deals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={accountSettings.deals}"
            android:text="@string/deals"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/promos"
            app:layout_constraintTop_toBottomOf="@+id/notification_types_l" />

        <CheckBox
            android:id="@+id/promos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={accountSettings.promos}"
            android:text="@string/promos"
            app:layout_constraintLeft_toRightOf="@+id/deals"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification_types_l" />

        <TextView
            android:id="@+id/communication_mode_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/communicationMode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/communication_mode"
            app:layout_constraintTop_toBottomOf="@+id/promos" />

        <RadioGroup
            android:id="@+id/communication_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintLeft_toRightOf="@+id/communication_mode_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promos">

            <RadioButton
                android:id="@+id/emailOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{accountSettings.communicationMode.equals(@string/email)}"
                android:onClick="@{() -> eventListener.onCommunicationMode(@string/email)}"
                android:text="@string/email" />

            <RadioButton
                android:id="@+id/smsOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{accountSettings.communicationMode.equals(@string/sms)}"
                android:onClick="@{() -> eventListener.onCommunicationMode(@string/sms)}"
                android:text="@string/sms" />
        </RadioGroup>

        <TextView
            android:id="@+id/default_payment_option_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/defaultPaymentOption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/default_payment_option"
            app:layout_constraintTop_toBottomOf="@+id/communication_mode" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/default_payment_option"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            app:adapter="@{spinAdapter}"
            app:layout_constraintLeft_toRightOf="@+id/default_payment_option_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/communication_mode"
            bind:pmtOpt="@={accountSettings.defaultPaymentOption}" />

        <TextView
            android:id="@+id/price_drop_percent_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/priceDropPercent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/price_drop_percent"
            app:layout_constraintTop_toBottomOf="@+id/default_payment_option" />

        <SeekBar
            android:id="@+id/price_drop_percent"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="80"
            android:min="5"
            android:progress="@={accountSettings.priceDropPercent}"
            app:layout_constraintLeft_toRightOf="@+id/price_drop_percent_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/default_payment_option"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/show_product_reviews_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/showProductReviews"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/price_drop_percent_l" />

        <RatingBar
            android:id="@+id/show_product_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:rating="@={accountSettings.productReviews}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_product_reviews_l" />

        <TextView
            android:id="@+id/promo_notification_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/promoNotification"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/promo_notification"
            app:layout_constraintTop_toBottomOf="@+id/show_product_reviews" />

        <Switch
            android:id="@+id/promo_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:checked="@={accountSettings.promoNotification}"
            app:layout_constraintLeft_toRightOf="@+id/promo_notification_l"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/show_product_reviews" />

        <Button
            android:id="@+id/save_b"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{(v) -> eventListener.onClickSaveSettings(v)}"
            android:text="@string/save_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/promo_notification" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>